--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -5,7 +5,7 @@ section headers =
 */
 
 :root {
-  margin-inline: 350px;
+  margin-inline: 20%;
 }
 
 :where(.css-dev-only-do-not-override-f7vrd6).ant-menu::before {
@@ -43,6 +43,7 @@ section headers =
   background-color: black;
   margin-top: 100px;
   left: 0;
+  // bottom: 0;
   width: 100%;
   position: absolute;
 }
@@ -56,14 +57,16 @@ section headers =
   padding-block: 20px !important;
   display: flex;
   align-items: center;
+  padding-inline: 21%;
   column-gap: 100px;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
 }
 
 .switch-container {
   z-index: 99999;
   position: fixed;
+  width: 25%;
 }
 
 .custom-switch {
@@ -74,15 +77,18 @@ section headers =
   z-index: 99999;
   position: fixed;
   row-gap: 40px;
-  // padding-block: 20px;
-  // border-radius: 10px;
   display: flex;
   flex-direction: column;
-  // align-items: space-between;
   height: 100%;
+}
 
-  // min-width: 1290px;
-  // background-color: rgba(84, 51, 16, 1);
+.thumbnail-pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .avatar-pic {
@@ -112,6 +118,12 @@ section headers =
 
 .ant-timeline-item.ant-timeline-item-last.ant-timeline-item-right {
   padding-bottom: 0;
+}
+
+.project-thumbnail {
+  width: 100%;
+  padding-top: 100%;
+  position: relative;
 }
 
 .project-thumbnail-mask:hover {
@@ -166,4 +178,8 @@ section headers =
   .sub-header-content {
     font-size: 18px;
   }
+}
+
+.project-image {
+  border-radius: 10px;
 }
