--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
-body {
-  height: 100vh;
-}
+// body {
+//   height: 100vh;
+// }
 
 :root {
   margin-inline: 18%;
@@ -39,14 +39,18 @@ body {
   text-align: center;
 }
 
-.footer-container {
-  padding-block: 40px;
-  background-color: black;
+#footer-container {
+  padding-block: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(31, 30, 30);
   left: 0;
   width: 100%;
   z-index: 99999;
   position: absolute;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 .custom-navbar {
@@ -194,7 +198,7 @@ body {
 
 @media only screen and (max-width: 460px) {
   .avatar-mobile {
-    margin-block: 20px;
+    margin-block: 40px;
     display: inline-block;
 
     border: 2px solid #543310;
@@ -202,6 +206,7 @@ body {
   .avatar-web {
     display: none;
   }
+
   .avatar-pic-mobile {
     height: 100px;
     width: 100px;
