--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -184,6 +184,7 @@
   text-align: justify;
 
   .sub-header-content {
+    text-indent: 50px;
     font-size: 18px;
   }
 }
@@ -197,6 +198,30 @@
 }
 
 @media only screen and (max-width: 460px) {
+  // .avatar-mobile {
+  //   margin-block: 40px;
+  //   display: inline-block;
+
+  //   border: 2px solid #543310;
+  // }
+  // .avatar-web {
+  //   display: none;
+  // }
+
+  // .avatar-pic-mobile {
+  //   height: 100px;
+  //   width: 100px;
+  // }
+  // .avatar-pic {
+  //   display: none;
+  // }
+  body {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+}
+
+@media only screen and (max-width: 643px) {
   .avatar-mobile {
     margin-block: 40px;
     display: inline-block;
@@ -207,9 +232,14 @@
     display: none;
   }
 
+  .name-details {
+    align-items: center;
+    justify-content: center;
+  }
+
   .avatar-pic-mobile {
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: 150px;
   }
   .avatar-pic {
     display: none;
