chore: modified avatar responsiveness

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -237,10 +237,10 @@
     justify-content: center;
   }
 
-  .avatar-pic-mobile {
-    height: 150px;
-    width: 150px;
-  }
+  // .avatar-pic-mobile {
+  //   height: 150px;
+  //   width: 150px;
+  // }
   .avatar-pic {
     display: none;
   }
