--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -40,7 +40,7 @@
 }
 
 #footer-container {
-  padding-block: 100px;
+  padding-block: 120px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -93,9 +93,9 @@
 }
 
 .avatar-pic {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  // width: 100%;
+  // height: 100%;
+  // object-fit: cover;
   top: 0;
   left: 0;
 }
@@ -190,6 +190,7 @@
 }
 
 .project-image {
+  border: 1px solid rgb(237, 227, 227);
   border-radius: 10px;
 }
 
